add cloudinary crediential to setup images data

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ PORT = 8000
 MONGODB_URL = mongodb+srv://rajankabir9_user_db:wanderlust12345@wanderlust-rbp.ymb9awb.mongodb.net/Wanderlust?appName=Wanderlust-RBP
 JWT_SECRET = "MY45600SECRET87"
 NODE_ENVIRONMENT = "Development"
+CLOUDINARY_CLOUD_NAME = "dx91wdzug"
+CLOUDINARY_API_KEY = "424532392326635"
+CLOUDINARY_API_SECRET = "2HvoIuFf28y_MWeMvOkf329QaqM"
